; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gem/extr_i915_gem_wait.c_fence_set_priority.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gem/extr_i915_gem_wait.c_fence_set_priority.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dma_fence = type { i32 }
%struct.i915_sched_attr = type { i32 }
%struct.dma_fence_array = type { i32, %struct.dma_fence** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dma_fence*, %struct.i915_sched_attr*)* @fence_set_priority to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fence_set_priority(%struct.dma_fence* %0, %struct.i915_sched_attr* %1) #0 {
  %3 = alloca %struct.dma_fence*, align 8
  %4 = alloca %struct.i915_sched_attr*, align 8
  %5 = alloca %struct.dma_fence_array*, align 8
  %6 = alloca i32, align 4
  store %struct.dma_fence* %0, %struct.dma_fence** %3, align 8
  store %struct.i915_sched_attr* %1, %struct.i915_sched_attr** %4, align 8
  %7 = load %struct.dma_fence*, %struct.dma_fence** %3, align 8
  %8 = call i64 @dma_fence_is_array(%struct.dma_fence* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %33

10:                                               ; preds = %2
  %11 = load %struct.dma_fence*, %struct.dma_fence** %3, align 8
  %12 = call %struct.dma_fence_array* @to_dma_fence_array(%struct.dma_fence* %11)
  store %struct.dma_fence_array* %12, %struct.dma_fence_array** %5, align 8
  store i32 0, i32* %6, align 4
  br label %13

13:                                               ; preds = %29, %10
  %14 = load i32, i32* %6, align 4
  %15 = load %struct.dma_fence_array*, %struct.dma_fence_array** %5, align 8
  %16 = getelementptr inbounds %struct.dma_fence_array, %struct.dma_fence_array* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = icmp slt i32 %14, %17
  br i1 %18, label %19, label %32

19:                                               ; preds = %13
  %20 = load %struct.dma_fence_array*, %struct.dma_fence_array** %5, align 8
  %21 = getelementptr inbounds %struct.dma_fence_array, %struct.dma_fence_array* %20, i32 0, i32 1
  %22 = load %struct.dma_fence**, %struct.dma_fence*** %21, align 8
  %23 = load i32, i32* %6, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.dma_fence*, %struct.dma_fence** %22, i64 %24
  %26 = load %struct.dma_fence*, %struct.dma_fence** %25, align 8
  %27 = load %struct.i915_sched_attr*, %struct.i915_sched_attr** %4, align 8
  %28 = call i32 @__fence_set_priority(%struct.dma_fence* %26, %struct.i915_sched_attr* %27)
  br label %29

29:                                               ; preds = %19
  %30 = load i32, i32* %6, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %6, align 4
  br label %13

32:                                               ; preds = %13
  br label %37

33:                                               ; preds = %2
  %34 = load %struct.dma_fence*, %struct.dma_fence** %3, align 8
  %35 = load %struct.i915_sched_attr*, %struct.i915_sched_attr** %4, align 8
  %36 = call i32 @__fence_set_priority(%struct.dma_fence* %34, %struct.i915_sched_attr* %35)
  br label %37

37:                                               ; preds = %33, %32
  ret void
}

declare dso_local i64 @dma_fence_is_array(%struct.dma_fence*) #1

declare dso_local %struct.dma_fence_array* @to_dma_fence_array(%struct.dma_fence*) #1

declare dso_local i32 @__fence_set_priority(%struct.dma_fence*, %struct.i915_sched_attr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
